k8s/envoy/config-map.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-cm
  namespace: "%{namespace}"
data:
  envoy.yaml: |
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }

    static_resources:
      listeners:
        - name: grpc-listener
          address:
            socket_address: { address: 0.0.0.0, port_value: 8080 }

          filter_chains:
            - filters:

                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: grpc_json
                    codec_type: AUTO
                    access_log:
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/svc.ServiceOne/", grpc: {} }
                              route: { cluster: service-one, timeout: { seconds: 60 } }

                    http_filters:

                      - name: envoy.filters.http.grpc_json_transcoder
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                          proto_descriptor: "/service_one_descriptor_set.pb"
                          services: ["svc.ServiceOne"]
                          match_incoming_request_route: false
                          ignore_unknown_query_parameters: true
                          auto_mapping: false
                          convert_grpc_status: true
                          print_options:
                            add_whitespace: true
                            always_print_primitive_fields: true
                            always_print_enums_as_ints: false
                            preserve_proto_field_names: true

                      - name: envoy.filters.http.ext_authz
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                          grpc_service:
                            envoy_grpc:
                              cluster_name: authz
                            timeout: 0.5s
                          transport_api_version: V3
                          failure_mode_allow: false
                          with_request_body:
                            max_request_bytes: 8192
                            allow_partial_message: true
                            pack_as_bytes: true
                          status_on_error:
                            code: 503

                      - name: envoy.filters.http.router
                        typed_config: {}

      clusters:

        - name: authz
          connect_timeout: 1.25s
          type: logical_dns
          lb_policy: round_robin
          dns_lookup_family: V4_ONLY
          http2_protocol_options: {}
          load_assignment:
            cluster_name: authz
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: authz.%{namespace}.svc.cluster.local
                          port_value: 5000

        - name: service-one
          connect_timeout: 1.25s
          type: logical_dns
          lb_policy: round_robin
          dns_lookup_family: V4_ONLY
          http2_protocol_options: {}
          load_assignment:
            cluster_name: service-one
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: service-one.%{namespace}.svc.cluster.local
                          port_value: 5000
