k8s/envoy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "%{namespace}"
  name: envoy
  labels:
    app: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: "bazel/k8s/envoy:image"
        command: ["envoy"]
        # args: ["-c", "/etc/envoy/envoy.yaml", "-l", "debug"]
        args: ["-c", "/etc/envoy/envoy.yaml" ]
        volumeMounts:
        - name: envoy-config-volume
          mountPath: /etc/envoy
        ports:
        - containerPort: 8080
        - containerPort: 8081

      volumes:
        - name: envoy-config-volume
          configMap:
            name: envoy-cm
---
apiVersion: v1
kind: Service
metadata:
  namespace: "%{namespace}"
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - port: 8080
      name: api
      protocol: TCP
    - port: 8081
      name: admin
      protocol: TCP
  clusterIP: None
